injectable/tests/ui/unknown_impl_attribute.stderr
error: unknown injectable_impl attribute: `bad`
 --> tests/ui/unknown_impl_attribute.rs
  |
  | #[injectable_impl(bad = "value")]
  |                   ^^^

warning: unused import: `constructor`
 --> tests/ui/unknown_impl_attribute.rs
  |
  | use injectable::{injectable_impl, constructor};
  |                                   ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
